# tinyvegeta

./: .gitignore  AGENTS.md  BRAIN.md  CLIENTS.md  Cargo.toml  IDENTITY.md  MEMORY.md  PLAYBOOK.md  README.md  SOUL.md  TOOLS.md  USER.md  heartbeat.md
.github/workflows/: security.yml
constitution/: LAWS.md
content/: x-post-update.md
docs/: AGENTS.md  INSTALL.md  MESSAGE-PATTERNS.md  QUEUE.md  RUST_MIGRATION_TODO.md  SOVEREIGN_RUNTIME.md  TEAMS.md  TROUBLESHOOTING.md
skills/script-polish/: SKILL.md
skills/security-auditor/: SKILL.md
skills/website-dev/: SKILL.md
skills/x-post-writer/: SKILL.md
src/: agent.rs  board.rs  config.rs  context.rs  error.rs  lib.rs  logging.rs  main.rs  task.rs  tmux.rs
src/cli/: mod.rs
src/core/: conversation.rs  mod.rs  queue.rs  routing.rs
src/heartbeat/: daemon.rs  mod.rs  scheduler.rs  tasks.rs
src/memory/: lock.rs  mod.rs  sqlite.rs  store.rs
src/protocol/: envelope.rs  mailbox.rs  mod.rs  types.rs
src/providers/: claude.rs  cline.rs  codex.rs  grok.rs  mod.rs  ollama.rs  opencode.rs  provider.rs
src/sovereign/: mod.rs
src/telegram/: client.rs  commands.rs  handler.rs  mod.rs  pairing.rs
src/web/: auth.rs  mod.rs  router.rs  server.rs
src/web/api/: agents.rs  memory.rs  mod.rs  teams.rs
templates/agent-pack/default/: ceo.md  coding.md  marketing.md  operations.md  sales.md  security.md  seo.md
