[package]
name = "tinyvegeta"
version = "0.1.0"
edition = "2021"
authors = ["Alban Beluli"]
description = "Multi-agent, multi-team, Telegram-first 24/7 AI assistant"
license = "MIT"
repository = "https://github.com/AlbanBeluli/tinyvegeta"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive", "env", "string"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "time"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1"
thiserror = "1"

# Telegram
teloxide = { version = "0.13", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }

# Web server (for later chunks)
axum = "0.7"
tower = { version = "0.4", features = ["util", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "limit"] }

# Leptos SSR (for later chunks - remove nightly if not using rust nightly)
leptos = { version = "0.6", features = ["serde"] }
leptos_axum = "0.6"

# Auth
jsonwebtoken = "9"
bcrypt = "0.15"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
ulid = "1"
cron = "0.12"
directories = "5"
notify = "6"
glob = "0.3"
regex = "1"

# HTTP clients
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async traits
async-trait = "0.1"
tokio-stream = "0.1"

[dev-dependencies]
tempfile = "3"

[profile.dev]
opt-level = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
